# proj

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  README.zh.md  demo-cmd.tape  demo-fzf.tape  demo-pass.tape  demo.tape  install.sh  release.sh
.github/workflows/: build.yml  release.yml
src/: main.rs
